Thu Nov 25 13:52:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Get_T.h:
        * connectors/dds4ccm/impl/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/DDS_Listen_T.h:
        * connectors/dds4ccm/impl/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/DDS_Read_T.h:
        * connectors/dds4ccm/impl/DDS_Read_T.cpp:
        * connectors/dds4ccm/impl/DDS_StateListen_T.h:
        * connectors/dds4ccm/impl/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.h:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DataReaderHandler_T.h:
        * connectors/dds4ccm/impl/DataReaderHandler_T.cpp:
        * connectors/dds4ccm/impl/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/DataReaderStateListener_T.h:
        * connectors/dds4ccm/impl/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/Getter_T.h:
        * connectors/dds4ccm/impl/Getter_T.cpp:
        * connectors/dds4ccm/impl/Reader_T.h:
        * connectors/dds4ccm/impl/Reader_T.cpp:
        * connectors/dds4ccm/impl/Updater_T.h:
        * connectors/dds4ccm/impl/Updater_T.cpp:
        * connectors/dds4ccm/impl/Writer_T.h:
        * connectors/dds4ccm/impl/Writer_T.cpp:
        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.h:
          Removed DDS_TYPE from templated parameters. Replaced this with more
          appropriate parameters (if neccessary).

Thu Nov 25 10:48:58 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Write_T.h:
        * connectors/dds4ccm/impl/DDS_Write_T.cpp: